Closed Bug 841563 Opened 11 years ago Closed 11 years ago

PROCESS_PRIORITY_HIGH is not getting set

Categories

(Firefox OS Graveyard :: General, defect)

defect
Not set
normal

Tracking

(blocking-b2g:tef+, firefox19 wontfix, firefox20 wontfix, firefox21 fixed, b2g18 fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 fixed)

RESOLVED FIXED
B2G C4 (2jan on)
blocking-b2g tef+
Tracking Status
firefox19 --- wontfix
firefox20 --- wontfix
firefox21 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- fixed

People

(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)

References

Details

(Whiteboard: QARegressExclude, [qa-])

Attachments

(1 file)

Terrible, terrible bug.  Just a sec.
Attached patch Patch, v1Splinter Review
Wow, I'm embarrassed by this mistake.  I didn't catch it because I'd been relying on my logging, which printed the right values.

Also fix an XXX comment.
Attachment #714124 - Flags: review?(jones.chris.g)
blocking-b2g: --- → tef+
Attachment #714124 - Flags: review?(jones.chris.g) → review+
Assignee: nobody → justin.lebar+bug
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/d61dec75e9a3
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: QARegressExclude
No need to create a TC in Moztrap for this defect.
Flags: in-moztrap-
Cannot verify, need steps to blackbox test this issue.
Whiteboard: QARegressExclude → QARegressExclude, [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: