Bug 841563 - Actually set PROCESS_PRIORITY_FOREGROUND_HIGH when we want to. r=cjones, a=blocking-tef